2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	* flumotion/manager/config.py:
	Reintroduce the removed (in r8746) "source" tag to make Jan happy.

2010-07-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/httpserver/mimetypes.py:
	Add webm to the mimetype mapping.

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	* flumotion/common/keycards.py:
	Set the token attribute to an empty string by default so further
	checks of the token's length don't crash

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	reviewed by: Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/keycards.py:
	When unjellying the __init__ method is not called and, sadly, the
	attributes that are not common for all the old keycard types are not
	created. Initialize them for backwards compatibility with old
	keycards.

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	reviewed by: Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/bouncers/multibouncer.py:
	We still need the old keycard classes to be allowed by the bouncer for
	backwards compatibility

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	reviewed by: Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.py:
	Warn about deprecated property 'issuer-class' but do not fail.

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	patch by: Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/keycards.py:
	Same issue as in r8769, the constructor of the Keycard class was
	overwriting parametersset by the other constructor.

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	patch by: Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/keycards.py:
	Reverse the order of constructors, because the credentials.Token
	constructors sets the token property and the Keycard constructor
	overwrites it with None.

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>
